<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/huge"
        android:title="@string/fragment_edit_comment_size_huge"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/large"
        android:title="@string/fragment_edit_comment_size_large"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/normal"
        android:title="@string/fragment_edit_comment_size_normal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/small"
        android:title="@string/fragment_edit_comment_size_small"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tiny"
        android:title="@string/fragment_edit_comment_size_tiny"
        app:showAsAction="ifRoom" />
</menu>
