<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:title="@string/action_filter"
        app:ico_color="@android:color/white"
        app:ico_icon="cmd_filter_variant"
        app:ico_padding="2dp"
        app:ico_size="24dp"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/all"
                    android:title="@string/media_filter_all"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/watching"
                    android:title="@string/media_filter_watching"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/watched"
                    android:title="@string/media_filter_finished"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/will_watch"
                    android:title="@string/media_filter_will_watch"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/cancelled"
                    android:title="@string/media_filter_cancelled"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>
