<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/sort"
        android:title="@string/action_sort"
        app:ico_color="?attr/colorOnPrimary"
        app:ico_icon="cmd_sort"
        app:ico_padding="2dp"
        app:ico_size="24dp"
        app:showAsAction="ifRoom"
        tools:ignore="UnusedIds">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/rating"
                    android:title="@string/action_sort_rating" />
                <item
                    android:id="@+id/time"
                    android:title="@string/action_sort_time" />
            </group>
        </menu>
    </item>
</menu>
