<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="n_mr1">

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_news"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message"
        android:shortcutId="news"
        android:shortcutLongLabel="@string/section_news"
        android:shortcutShortLabel="@string/section_news">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="news"
            android:targetClass="me.proxer.app.MainActivity"
            android:targetPackage="me.proxer.app" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_chat"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message"
        android:shortcutId="chat"
        android:shortcutLongLabel="@string/section_chat"
        android:shortcutShortLabel="@string/section_chat">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="chat"
            android:targetClass="me.proxer.app.MainActivity"
            android:targetPackage="me.proxer.app" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_bookmarks"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message"
        android:shortcutId="bookmarks"
        android:shortcutLongLabel="@string/section_bookmarks"
        android:shortcutShortLabel="@string/section_bookmarks">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="reminder"
            android:targetClass="me.proxer.app.MainActivity"
            android:targetPackage="me.proxer.app" />
    </shortcut>

    <share-target android:targetClass="me.proxer.app.chat.prv.PrvMessengerActivity">
        <data android:mimeType="text/plain" />
        <category android:name="me.proxer.app.sharingshortcuts.category.TEXT_SHARE_TARGET" />
    </share-target>
</shortcuts>
