<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".chat.prv.create.CreateConferenceParticipantAdapter"
    tools:ignore="UselessParent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/participantInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/cancel"
        android:hint="@string/fragment_create_conference_add_participant_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/participantInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="UnusedAttribute" />
    </com.google.android.material.textfield.TextInputLayout>

    <me.proxer.app.ui.view.InfoImageButton
        android:id="@+id/cancel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/accept"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/fragment_create_conference_cancel_content_description" />

    <me.proxer.app.ui.view.InfoImageButton
        android:id="@+id/accept"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/fragment_create_conference_accept_description"
        tools:ignore="ContentDescription" />
</RelativeLayout>
